--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "moment": "^2.24.0",
+    "vue": "^2.6.11",
+    "vuetify": "^2.2.19",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
