--- a/orthanc/config.json
+++ b/orthanc/config.json
@@ -52,8 +52,12 @@
   // folders, in which case they will be scanned non-recursively to
   // find shared libraries. Backslashes must be either escaped by
   // doubling them, or replaced by forward slashes "/".
-  "Plugins" : [
+ "Plugins" : [
+    "."
   ],
+  "ServeFolders" : {
+    "/fosdem" : "C:/Users/Damian/Desktop/Studia/KwdmProject/webapp"
+  },
 
   // Maximum number of processing jobs that are simultaneously running
   // at any given time. A value of "0" indicates to use all the
