--- a/server/nginx/default.conf
+++ b/server/nginx/default.conf
@@ -1,18 +1,17 @@
 server {
-   listen       80;
-   server_name orthanc;
+    listen       80;
+    server_name localhost;
 
-   client_max_body_size 8M;
+    client_max_body_size 8M;
 
-   location  /orthanc/  {
-      proxy_pass http://orthanc:8042;
-      proxy_set_header HOST $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      rewrite /orthanc(.*) $1 break;
-
-      add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-      add_header 'Access-Control-Allow-Origin' '*' always;
-   }
+    location  /orthanc/  {
+        rewrite /orthanc(.*) $1 break;
+        proxy_pass http://orthanc:8042;
+        proxy_set_header HOST $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Origin' '*';
+    }
 }
