--- a/server/nginx/default.conf
+++ b/server/nginx/default.conf
@@ -3,6 +3,7 @@ server {
     server_name localhost;
 
     client_max_body_size 8M;
+    error_log error.log debug;
 
     location  /orthanc/  {
         rewrite /orthanc(.*) $1 break;
