--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,23 @@ services:
       PORT: 4200
       CHOKIDAR_USEPOLLING: 1
       CHOKIDAR_POLLINTERVAL: 3000
+  webapp:
+    build: ./webapp
+    restart: always
+    depends_on:
+      - orthanc
+      - nginx
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./webapp/src:/usr/webapp/src
+      - ./webapp/public:/usr/webapp/public
+    environment:
+      PORT: 8080
+      CHOKIDAR_USEPOLLING: 1
+      CHOKIDAR_POLLINTERVAL: 3000
 volumes:
   orthanc:
   nginx:
   angular:
+  webapp:
