--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,16 @@ services:
     build: server/orthanc
     restart: unless-stopped
     volumes: ["orthanc:/etc/orthanc:Z"]
+  segmentation:
+    build: segmentation
+    restart: unless-stopped
+    ports:
+      - "5000:5000"
+    volumes: ["segmentation:/etc/segmentation:Z"]
+    environment:
+      PORT: 5000
+      CHOKIDAR_USEPOLLING: 1
+      CHOKIDAR_POLLINTERVAL: 3000
   webapp:
     build: ./webapp
     restart: always
@@ -28,4 +38,5 @@ services:
 volumes:
   orthanc:
   nginx:
+  segmentation:
   webapp:
