--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
-segmentationapi/.vscode/
-segmentationapi/model.json
-segmentationapi/model.h5
-segmentationapi/network/.vscode/
-segmentationapi/network/outputs/*.vtk
-segmentationapi/network/models/*.h5
-segmentationapi/network/__pycache__/
-segmentationapi/network/predictions/
-segmentationapi/dicom/.vscode/
-segmentationapi/dicom/__pycache__/
+/.vscode/
+*.vtk
+*.h5
 *.dcm
 .idea
 .vscode
