flask segmentation instance init

--- a/segmentation/Dockerfile
+++ b/segmentation/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3
 
 WORKDIR /etc/segmentation
 
-COPY mock-requirements.txt ./
-RUN pip install --no-cache-dir -r mock-requirements.txt
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
 EXPOSE 5000
-CMD [ "python", "./mock-segmentation-api.py" ]
+CMD [ "python", "./segmentation_api.py" ]
