--- a/segmentation/requirements.txt
+++ b/segmentation/requirements.txt
@@ -1,6 +1,12 @@
-numpy==1.12.1
-tensorflow==1.15.2
-keras==2.1.4 
-flask==1.0.2
-pillow==6.2.0
-h5py==2.8.0
+numpy
+tensorflow
+keras 
+flask
+flask_cors
+pillow
+h5py
+simpleitk
+nilearn
+nipype
+os
+json
