--- a/segmentation/Dockerfile
+++ b/segmentation/Dockerfile
@@ -5,4 +5,6 @@ WORKDIR /etc/segmentation
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN pip install git+https://www.github.com/keras-team/keras-contrib.git
+
 EXPOSE 5000
