--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.26",
     "vuex": "^3.3.0"
